--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "babel-core": "^5.6.18",
     "babel-jest": "^5.3.0",
     "babel-loader": "^5.3.1",
+    "babel-runtime": "^5.8.5",
     "bootstrap": "^3.3.5",
     "css-loader": "^0.15.2",
     "file-loader": "^0.8.4",
+    "flummox": "^3.5.2",
     "imports": "^1.0.0",
     "jest-cli": "^0.4.15",
     "node-libs-browser": "^0.5.2",
@@ -34,6 +36,7 @@
     "react-bootstrap": "^0.23.7",
     "react-router": "^0.13.3",
     "react-router-bootstrap": "^0.17.2",
+    "rest": "^1.3.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.1"
   }
