--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   "devDependencies": {
     "babel": "^5.6.14",
     "babel-core": "^5.6.18",
+    "babel-eslint": "^4.0.5",
     "babel-jest": "^5.3.0",
     "babel-loader": "^5.3.1",
     "babel-runtime": "^5.8.5",
     "bootstrap": "^3.3.5",
     "css-loader": "^0.15.2",
+    "eslint": "^1.0.0",
+    "eslint-loader": "^0.14.2",
+    "eslint-plugin-react": "^3.1.0",
     "file-loader": "^0.8.4",
     "flummox": "^3.5.2",
     "imports": "^1.0.0",
