--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "no-class-assign": [2],
     "no-const-assign": [2],
     "no-this-before-super": [2],
+    "no-unused-vars": [2, {"vars": "all", "args": "none"}],
     "no-var": [2],
     "semi": [2, "always"]
   },
