--- a/package.json
+++ b/package.json
@@ -32,14 +32,20 @@
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.2.1",
     "file-loader": "^0.8.4",
-    "flummox": "^3.5.2",
+    "immutable": "^3.7.4",
     "imports": "^1.0.0",
     "jest-cli": "^0.4.15",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.7",
+    "react-redux": "^0.8.2",
     "react-router": "^0.13.3",
     "react-router-bootstrap": "^0.17.2",
+    "redux": "^1.0.0",
+    "redux-actions": "^0.7.0",
+    "redux-devtools": "^0.2.0",
+    "redux-promise": "^0.5.0",
+    "redux-thunk": "^0.1.0",
     "rest": "^1.3.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.1"
