--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean": "rm -rf public"
   },
   "devDependencies": {
+    "api-check": "^7.5.0",
     "autoprefixer": "^6.0.0",
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
@@ -40,8 +41,9 @@
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.1",
     "eslint-plugin-standard": "^1.3.0",
-    "expect": "^1.9.0",
+    "expect": "^1.10.0",
     "file-loader": "^0.8.4",
+    "immutable": "^3.7.5",
     "imports-loader": "^0.6.4",
     "jquery": "^2.1.4",
     "karma": "^0.13.9",
