--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-standard": "^1.3.0",
     "expect": "^1.10.0",
     "file-loader": "^0.8.4",
+    "gsap": "^1.18.0",
     "immutable": "^3.7.5",
     "imports-loader": "^0.6.4",
     "jquery": "^2.1.4",
@@ -55,6 +56,7 @@
     "mocha": "^2.3.0",
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.3.2",
+    "null-loader": "^0.1.1",
     "postcss": "^5.0.4",
     "postcss-loader": "^0.6.0",
     "react": "^0.13.3",
