--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-mocha": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "lodash": "^3.10.1",
     "mocha": "^2.3.0",
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.3.2",
