--- a/package.json
+++ b/package.json
@@ -60,14 +60,16 @@
     "null-loader": "^0.1.1",
     "postcss": "^5.0.4",
     "postcss-loader": "^0.7.0",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.25.1",
-    "react-redux": "^2.1.0",
-    "redux": "^2.0.0",
+    "react": "^0.14.1",
+    "react-addons-test-utils": "^0.14.1",
+    "react-bootstrap": "^0.27.3",
+    "react-dom": "^0.14.1",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
-    "redux-logger": "^1.0.6",
+    "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^0.1.0",
+    "redux-thunk": "^1.0.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.1",
