--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.4.1",
     "eslint": "^3.0.1",
-    "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard": "^5.3.5",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint-plugin-standard": "^2.0.0",
     "expect": "^1.20.1",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-cli": "^1.0.0",
     "karma-coverage": "^1.0.0",
@@ -48,7 +50,7 @@
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.7.0",
     "phantomjs-prebuilt": "^2.1.7",
-    "postcss": "^5.0.21",
+    "postcss": "^5.1.0",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
     "sass-loader": "^4.0.0",
@@ -57,7 +59,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "axios": "^0.12.0",
+    "axios": "^0.13.0",
     "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
