--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
     "expect": "^1.20.1",
+    "jailed": "^0.3.1",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-cli": "^1.0.0",
