--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-starter",
+  "name": "watif",
   "version": "1.0.0",
-  "description": "standard start for a webapp",
+  "description": "interfactive fiction system",
   "main": "bundle.js",
   "scripts": {
     "start-dev": "webpack-dev-server --content-base public",
@@ -13,7 +13,8 @@
     "spec:watch": "karma start --single-run=false",
     "check-updates": "npm-check -su",
     "clean": "rm -rf public/js",
-    "tags": "ctags --recurse --exclude=@.gitignore --verbose -f .tags lib"
+    "tags": "ctags --recurse --exclude=@.gitignore --verbose -f .tags lib",
+    "pack-house-sitting": "webpack --config=examples/house-sitting/webpack.config.js --colors --progress -d"
   },
   "author": "Jon Willesen",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "change-case": "^3.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
     "eslint": "^3.0.1",
